--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2021-10-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2021-10-01/netapp.json
@@ -1284,6 +1284,9 @@
             "$ref": "../../../../../common-types/resource-management/v2/types.json#/parameters/ApiVersionParameter"
           }
         ],
+        "x-ms-pageable": {
+          "nextLinkName": "nextLink"
+        },
         "responses": {
           "200": {
             "description": "OK",
@@ -1570,7 +1573,7 @@
         }
       }
     },
-    "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.NetApp/netAppAccounts/{accountName}/capacityPools/{poolName}/volumes/{volumeName}/relocateVolume": {
+    "/subscriptions/{subscriptionId}/resourceGroups/{resourceGroupName}/providers/Microsoft.NetApp/netAppAccounts/{accountName}/capacityPools/{poolName}/volumes/{volumeName}/relocate": {
       "post": {
         "tags": [
           "Volumes Relocation"
@@ -4889,6 +4892,10 @@
           "items": {
             "$ref": "#/definitions/replicationObject"
           }
+        },
+        "nextLink": {
+          "type": "string",
+          "description": "URL to get the next set of results."
         }
       }
     },
@@ -5001,6 +5008,14 @@
           "description": "Default group quota for volume in KiBs. If isDefaultQuotaEnabled is set, the minimum value of 4 KiBs applies.",
           "example": 4,
           "default": 0
+        },
+        "unixPermissions": {
+          "type": "string",
+          "description": "UNIX permissions for NFS volume accepted in octal 4 digit format. First digit selects the set user ID(4), set group ID (2) and sticky (1) attributes. Second digit selects permission for the owner of the file: read (4), write (2) and execute (1). Third selects permissions for other users in the same group. the fourth for other users not in the group. 0755 - gives read/write/execute permissions to owner and read/execute to group and other users.",
+          "minLength": 4,
+          "maxLength": 4,
+          "x-nullable": true,
+          "example": "0770"
         }
       }
     },
